--- a/g7_declaration/SQ1-1p-iv.yml
+++ b/g7_declaration/SQ1-1p-iv.yml
@@ -1,2 +1,2 @@
-question: What is the DUNS number of your parent organisation's head office (if it has one)?
+question: What is the head office DUNS number of your parent organisation (if you have one)?
 type: text
