--- a/g7_declaration/SQ1-1q-i.yml
+++ b/g7_declaration/SQ1-1q-i.yml
@@ -1,2 +1,2 @@
-question: Full name of the ultimate parent company
+question: What is the full name of your ultimate parent company (if you have one)?
 type: text
