--- a/g7_declaration/SQ1-1q-ii.yml
+++ b/g7_declaration/SQ1-1q-ii.yml
@@ -1,2 +1,2 @@
-question: Registered office address (if applicable)
+question: What is the registered office address of your ultimate parent company (if you have one)
 type: text
