--- a/g7_declaration/SQ1-1q-iii.yml
+++ b/g7_declaration/SQ1-1q-iii.yml
@@ -1,2 +1,2 @@
-question: Registration number (if applicable)
+question: What is the registration number of your parent company (if you have one)?
 type: text
