--- a/g7_declaration/SQ1-1q-iv.yml
+++ b/g7_declaration/SQ1-1q-iv.yml
@@ -1,2 +1,2 @@
-question: Head office DUNS number
+question: What is the head office DUNS number of your parent company (if you have one)?
 type: text
