Removed carriage return

--- a/g7_declaration/SQ1-1h.yml
+++ b/g7_declaration/SQ1-1h.yml
@@ -1,3 +1,2 @@
-question: What is your organisation's registered VAT number?
-(9 or 12 characters.)
+question: What is your organisation's registered VAT number? (9 or 12 characters.)
 type: text
