--- a/g7_declaration/SQ2-1abcd.yml
+++ b/g7_declaration/SQ2-1abcd.yml
@@ -1,20 +1,17 @@
 question: >
   Regulation 57 (1)
-  Within the past five years for your organisation and/or any of your or the
-  Group of Economic Operators’ proposed Sub-Contractors and/or members of your
-  Group of Economic Operators, has the organisation, directors or partners or
-  any other person who has powers of representation, decision or control been
-  convicted of any of the following offences or any other offence within the
-  meaning of Article 57(1) of the Public Contracts Directive as defined by the
-  law of any jurisdiction outside England and Wales and Northern Ireland?
-  conspiracy within the meaning of section 1 or 1A of the Criminal Law Act 1977
-  or article 9 or 9A of the Criminal Attempts and Conspiracy (Northern Ireland)
+  Within the past five years, has anyone who represents your organisation or a partner organisation, been convicted of:
+  • conspiracy within the meaning of section 1 or 1A of the Criminal Law Act 1977 article 9 or 9A of the Criminal Attempts and Conspiracy (Northern Ireland)
   Order 1983 where that conspiracy relates to participation in a criminal
   organisation as defined in Article 2 of Council Framework Decision
-  2008/841/JHA on the fight against organised crime;
-  corruption within the meaning of section 1(2) of the Public Bodies Corrupt
-  Practices Act 1889 or section 1 of the Prevention of Corruption Act 1906;
-  the common law offence of bribery;
-  bribery within the meaning of sections 1, 2 or 6 of the Bribery Act 2010;
-  or section 113 of the Representation of the People Act 1983.
+  2008/841/JHA on the fight against organised crime?
+  • corruption within the meaning of section 1(2) of the Public Bodies Corrupt
+  Practices Act 1889 or section 1 of the Prevention of Corruption Act 1906?
+  • the common law offence of bribery?
+  • bribery within the meaning of sections 1, 2 or 6 of the Bribery Act 2010?
+  • section 113 of the Representation of the People Act 1983?
+  • any other offence within the
+  meaning of Article 57(1) of the Public Contracts Directive as defined by the
+  law of any jurisdiction outside England and Wales and Northern Ireland
+  hint: Organisation representatives include: members of your group of economic operators, their proposed subcontractors, and any directors, partners, or any other person who has powers of representation, decision or control.
 type: boolean
