--- a/g7_declaration/PR1.yml
+++ b/g7_declaration/PR1.yml
@@ -1,3 +1,3 @@
 id: PR1
-question: Do you accept the terms of participation as described in Attachment 5 of the supplier pack?
+question: Do you accept the terms of participation as described in Attachment 5 of the supplier pack? (will add link)
 type: boolean
