--- a/g7_declaration/SQ1-3.yml
+++ b/g7_declaration/SQ1-3.yml
@@ -7,7 +7,7 @@ options:
   -
     label: broad network access? Are your cloud services easily accessible over the network and across a wide range of platforms (eg mobile phones, tablets, laptops and workstations) and a mix of applications that are both thin (the bulk of data processing occurs on the server) and thick (most processing occurs on the local platform)?
   -
-    label: resource pooling? Are your computing resources (eg storage, processing, memory and network bandwidth) pooled to serve multiple consumers using a multi-tenant model, with different physical and virtual resources dynamically assigned and reassigned according to consumer demand. 
+    label: resource pooling? Are your computing resources (eg storage, processing, memory and network bandwidth) pooled to serve multiple consumers using a multi-tenant model, with different physical and virtual resources dynamically assigned and reassigned according to consumer demand? 
   -
     label: rapid elasticity? Can your cloud services be quickly, and sometimes automatically, scaled to serve the required number of users, according to demand?
   -
