--- a/g7_declaration/SQ1-3.yml
+++ b/g7_declaration/SQ1-3.yml
@@ -11,4 +11,4 @@ options:
   -
     label: rapid elasticity? Can your cloud services be quickly, and sometimes automatically, scaled to serve the required number of users, according to demand?
   -
-    label: measured service. Can your resource use (eg storage, processing, bandwidth and number of active user accounts) be monitored, controlled and reported to the contracting body?
+    label: measured service? Can your resource use (eg storage, processing, bandwidth and number of active user accounts) be monitored, controlled and reported to the contracting body?
