--- a/g7_declaration/SQ1-1d.yml
+++ b/g7_declaration/SQ1-1d.yml
@@ -1,3 +1,3 @@
-question: When and where was your organisation registered?
+question: When was your organisation first registered?
 hint: (Maximum 255 characters.)
 type: text
