--- a/g7_declaration/SQ1-1e.yml
+++ b/g7_declaration/SQ1-1e.yml
@@ -1,2 +1,3 @@
-question: What is your organisation's company registration number?
+question: What is your organisation's Companies House number?
+hint: If you don't have a Companies House number, you don't have to answer this question.
 type: text
