--- a/g7_declaration/SQ1-1g.yml
+++ b/g7_declaration/SQ1-1g.yml
@@ -1,3 +1,3 @@
 question: What is the DUNS number for your organisation's head office?
-hint: (Maximum 9 characters.)
+hint: There are 9 digits in a DUNS number.
 type: text
