--- a/g7_declaration/SQ1-1h.yml
+++ b/g7_declaration/SQ1-1h.yml
@@ -1,2 +1,3 @@
-question: What is your organisation's registered VAT number? (9 or 12 characters.)
+question: What is your organisation's registered VAT number? 
+hint: There are either 9 or 12 characters in a VAT number.
 type: text
