--- a/g7_declaration/SQ1-1p-ii.yml
+++ b/g7_declaration/SQ1-1p-ii.yml
@@ -1,2 +1,2 @@
-question: What is the registered office address of your parent company (if you have one)?
+question: What is the registered office address of your immediate parent company (if you have one)?
 type: text
