--- a/g7_declaration/SQ1-1p-iii.yml
+++ b/g7_declaration/SQ1-1p-iii.yml
@@ -1,2 +1,2 @@
-question: What is the registration number of your parent company (if you have one)?
+question: What is the registration number of your immediate parent company (if you have one)?
 type: text
