--- a/g7_declaration/SQ2-1abcd.yml
+++ b/g7_declaration/SQ2-1abcd.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past five years, has anyone who represents your organisation or a partner organisation been convicted of:
+  Within the past five years has anyone who represents your organisation or a partner organisation been convicted of:
   
   
   - conspiracy within the meaning of section 1 or 1A of the Criminal Law Act 1977 article 9 or 9A of the Criminal Attempts and Conspiracy (Northern Ireland)
