--- a/g7_declaration/SQ3-1a.yml
+++ b/g7_declaration/SQ3-1a.yml
@@ -1,12 +1,10 @@
 question: >
-  Regulation 57 (8) –
-  Within the past three years, please indicate if anywhere in the world any of
-  the following situations have applied, or currently apply, to your organisation
-  and/or any of your or the Group of Economic Operators’ proposed Sub-Contractors
-  and/or members of your Group of Economic Operators:
-  An organisation has violated applicable obligations referred to in Regulation
-  56 (2)  in the fields of environmental, social and labour law established by EU
+  Within the past three years, please indicate if your organisation or any of your partner organisations is currently or has in the past:
+  
+  
+  - violated applicable obligations referred to in Regulation
+  56 (2)(http://www.legislation.gov.uk/uksi/2015/102/part/2/chapter/2/crossheading/conduct-of-the-procedure-choice-of-participants-and-award-of-contracts/made) in the fields of environmental, social and labour law established by EU
   law, national law, collective agreements or by the international environmental,
-  social and labour law provisions listed in Annex X to the Directive as amended
-  from time to time;
+  social and labour law provisions listed in Annex X to the Directive;
+hint: "Visit http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made to check that your organisation complies with Regulation 57(8) in the Public Contracts Regulations 2015."
 type: boolean
