--- a/g7_declaration/SQ3-1a.yml
+++ b/g7_declaration/SQ3-1a.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past three years, please indicate if your organisation or any of your partner organisations is currently or has in the past:
+  Within the past three years, has your organisation or any of your partner organisations:
   
   
   - violated applicable obligations referred to in Regulation
