--- a/g7_declaration/SQ3-1c.yml
+++ b/g7_declaration/SQ3-1c.yml
@@ -1,4 +1,7 @@
 question: >
-  An organisation is guilty of grave professional misconduct, which renders its
-  integrity questionable;
+  Within the past three years, has your organisation or any of your partner organisations:
+  
+  
+    - been guilty of grave professional misconduct?
+  
 type: boolean
