--- a/g7_declaration/SQ3-1d.yml
+++ b/g7_declaration/SQ3-1d.yml
@@ -1,4 +1,5 @@
 question: >
-  An organisation has entered into agreements with other economic operators
-  aimed at distorting competition;
+  Within the past three years, has your organisation or any of your partner organisations:
+  
+    - entered into agreements with other economic operators aimed at distorting competition?
 type: boolean
