--- a/g7_declaration/SQ1-3.yml
+++ b/g7_declaration/SQ1-3.yml
@@ -1,13 +1,14 @@
-question: "Do the cloud services you're providing for G-Cloud 7 have or support:"
+question: "Please confirm that all cloud services you are providing have or support:"
 type: checkboxes
 options:
   -
-    label: on-demand self-service? Is access to your cloud services, eg server time or network storage, automatically available as needed without interaction between the supplier and the contracting body?
+    label: on-demand self-service. Your cloud services, eg server time or network storage, must be automatically available without interaction between the supplier and the contracting body.
   -
-    label: broad network access? Are your cloud services easily accessible over the network and across a wide range of platforms (eg mobile phones, tablets, laptops and workstations) and a mix of applications that are both thin (the bulk of data processing occurs on the server) and thick (most processing occurs on the local platform)?
+    label: broad network access. Your cloud services must be easily accessible over the network and across a wide range of platforms (eg mobile phones, tablets, laptops and workstations) and a mix of applications that are both thin (the bulk of data processing occurs on the server) and thick (most processing occurs on the local platform).
   -
-    label: resource pooling? Are your computing resources (eg storage, processing, memory and network bandwidth) pooled to serve multiple consumers using a multi-tenant model, with different physical and virtual resources dynamically assigned and reassigned according to consumer demand?
+    label: resource pooling. Your computing resources (eg storage, processing, memory and network bandwidth) must be pooled to serve multiple consumers using a multi-tenant model, with different physical and virtual resources dynamically assigned and reassigned according to consumer demand.
   -
-    label: rapid elasticity? Can your cloud services be quickly, and sometimes automatically, scaled to serve the required number of users, according to demand?
+    label: rapid elasticity. Your cloud services must be quickly, and sometimes automatically, scaled to serve the required number of users, according to demand.
   -
-    label: measured service? Can your resource use (eg storage, processing, bandwidth and number of active user accounts) be monitored, controlled and reported to the contracting body?
+    label: measured service. Your resource use (eg storage, processing, bandwidth and number of active user accounts) must be monitored, controlled and reported to the contracting body.
+  
