--- a/g7_declaration/PR2.yml
+++ b/g7_declaration/PR2.yml
@@ -1,2 +1,2 @@
-question: Do you accept the draft terms and conditions as set out in the Attachment 4 Framework Agreement and Call Off Contract documents in the supplier pack? (will add link)
+question: Do you accept the draft terms and conditions as set out in the Attachment 4 Framework Agreement and Call-Off Contract documents in the supplier pack? (will add link)
 type: boolean
