--- a/g7_declaration/SQ5-2a.yml
+++ b/g7_declaration/SQ5-2a.yml
@@ -1,7 +1,2 @@
-question: Please select YES or NO to indicate whether or not your business is established in the UK.
-type: radios
-options:
-  -
-    label: "YES Your business is established in the UK"
-  -
-    label: "NO Your business is not established in the UK"
+question: Was your business established in the UK?
+type: boolean
