--- a/g7_declaration/SQ3-1g.yml
+++ b/g7_declaration/SQ3-1g.yml
@@ -1,7 +1,10 @@
 question: >
-  An organisation has shown significant or persistent deficiencies in the
-  performance of a substantive requirement under a prior public contract, a
+  Within the past three years, has your organisation or any of your partner organisations:
+  
+  
+    - shown significant or persistent deficiencies in the performance of a substantive requirement under a prior public contract, a
   prior contract with a contracting entity, or a prior concession contract,
-  which led to early termination of that prior contract, damages or other
-  comparable sanctions;
+  which led to early termination of the contract, damages or other
+  comparable sanctions?
+  
 type: boolean
