--- a/g7_declaration/SQ3-1h-i.yml
+++ b/g7_declaration/SQ3-1h-i.yml
@@ -1,6 +1,9 @@
 question: >
-  An organisation has:
-  Been guilty of serious misrepresentation in supplying the information required
+  Within the past three years, has your organisation or any of your partner organisations:
+
+
+    - been found guilty of serious misrepresentation in supplying the information required
   for the verification of the absence of grounds for exclusion or the fulfilment
-  of the selection criteria; or
+  of the selection criteria?
+  
 type: boolean
