--- a/g7_declaration/SQ3-1h-ii.yml
+++ b/g7_declaration/SQ3-1h-ii.yml
@@ -1,4 +1,8 @@
 question: >
-  Withheld such information or is not able to submit supporting documents
-  required under Regulation 59; or
+Within the past three years, has your organisation or any of your partner organisations:
+
+
+    - withheld such information or can't submit supporting documents
+      required under Regulation 59 (http://www.legislation.gov.uk/uksi/2015/102/regulation/59/made) of the Public Contracts Regulations 2015?
+      
 type: boolean
