--- a/g7_declaration/SQD2b.yml
+++ b/g7_declaration/SQD2b.yml
@@ -1,2 +1,3 @@
 question: Is your business registered with the appropriate trade or professional register(s) in the EU member state where it is established (as set out in Annexes IX A-C of Directive 2004/18/EC, as amended) under the conditions laid down by that member state.
+hint: We think this can be deleted as it is a duplicate of a question asked earlier
 type: boolean
