--- a/g7_declaration/SQD2e.yml
+++ b/g7_declaration/SQD2e.yml
@@ -1,2 +1,3 @@
 question: If you selected YES to question SQ5.1d, please provide details of what is required and confirm that you have complied with this.
+hint: We think this can be deleted as it is a duplicate of a question asked earlier
 type: text
