--- a/g7_declaration/SQ1-1i-i.yml
+++ b/g7_declaration/SQ1-1i-i.yml
@@ -1,3 +1,3 @@
 question: Is your business registered with the appropriate professional or trade register(s) in the EU member state where it's established?
-hint: Visit http://www.legislation.gov.uk/uksi/2015/102/regulation/58/made to check your organisation complies with Schedule 5, Regulation 58(5) of the Public Contracts Regulations 2015. 
+hint: Visit http://www.legislation.gov.uk/uksi/2015/102/regulation/58/made to check that your organisation complies with Schedule 5, Regulation 58(5) of the Public Contracts Regulations 2015. 
 type: boolean
