--- a/g7_declaration/SQ3-1i-i.yml
+++ b/g7_declaration/SQ3-1i-i.yml
@@ -1,4 +1,7 @@
 question: >
-  An organisation has undertaken to:
-  Unduly influence the decision-making process of the contracting authority, or
+  Within the past three years, has your organisation or any of your partner organisations:
+  
+  
+    - unduly influenced the decision-making process of the contracting authority?
+  
 type: boolean
