--- a/g7_declaration/SQ2-1abcd.yml
+++ b/g7_declaration/SQ2-1abcd.yml
@@ -4,7 +4,7 @@ question: >
   
   - conspiracy within the meaning of section 1 or 1A of the Criminal Law Act 1977 article 9 or 9A of the Criminal Attempts and Conspiracy (Northern Ireland)
     Order 1983 where that conspiracy relates to participation in a criminal
-    organisation as defined in Article 2 of Council Framework Decision
+    organisation as defined in article 2 of Council Framework Decision
     2008/841/JHA on the fight against organised crime?
 
   - corruption within the meaning of section 1(2) of the Public Bodies Corrupt
@@ -16,7 +16,7 @@ question: >
 
   - section 113 of the Representation of the People Act 1983?
 
-  - any other offence within the meaning of Article 57(1) of the Public Contracts Directive as defined by the
+  - any other offence within the meaning of article 57(1) of the Public Contracts Directive as defined by the
     law of any jurisdiction outside England and Wales and Northern Ireland
   
 hint: "Organisation representatives include: members of your group of economic operators, their proposed subcontractors, and any directors, partners, or any other person who has powers of representation, decision or control. Visit http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made to check that your organisation complies with Regulation 57(1) in the Public Contracts Regulations 2015."
