--- a/g7_declaration/SQ3-1i-ii.yml
+++ b/g7_declaration/SQ3-1i-ii.yml
@@ -1,4 +1,7 @@
 question: >
-  Obtain confidential information that may confer upon the organisation undue
-  advantages in the procurement procedure; or
+  Within the past three years, has your organisation or any of your partner organisations:
+  
+  
+    - obtained confidential information that may give you undue
+  advantages in the procurement procedure?
 type: boolean
