--- a/g7_declaration/SQ3-1j.yml
+++ b/g7_declaration/SQ3-1j.yml
@@ -1,4 +1,5 @@
 question: >
-  An organisation has negligently provided misleading information that may have
-  a material influence on decisions concerning exclusion, selection or award.
+  Within the past three years, has your organisation or any of your partner organisations:
+  
+    - provided misleading information that may have a material influence on decisions concerning exclusion, selection or award?
 type: boolean
