--- a/g7_declaration/SQ4-1a.yml
+++ b/g7_declaration/SQ4-1a.yml
@@ -1,10 +1,10 @@
 question: >
-  From 1 April 2013 onwards, for your organisation and/or any of your or the
-  Group of Economic Operators’ proposed Sub-Contractors and/or members of your
-  Group of Economic Operators, have any of the organisation’s tax returns
-  submitted anywhere in the world on or after 1 October 2012:
-  [Guidance note: Section 4 relating to tax compliance only applies where the
-  Authority has indicated that the contract is over £5million in value]
-  Given rise to a criminal conviction for tax related offences which is unspent,
-  or to a civil penalty for fraud or evasion;
+  From 1 April 2013 onwards, have any of your or your partner organisations' tax returns
+  submitted after 1 October 2012:
+  
+  
+    - given rise to a criminal conviction for tax-related offences which is unspent,
+  or to a civil penalty for fraud or evasion?
+
+hint: "Section 4 relating to tax compliance only applies when the contract is over £5million in value."
 type: boolean
