--- a/g7_declaration/SQ2-1ghijklmn.yml
+++ b/g7_declaration/SQ2-1ghijklmn.yml
@@ -1,8 +1,8 @@
 question: >
-  Within the past five years has anyone who represents your organisation or a partner organisation been convicted of:
+  Within the past 5 years has anyone who represents your organisation or a partner organisation been convicted of:
   
   
-    - any offence under sections 44 to 46 of the Serious Crime Act 2007 which relates to an offence covered by subparagraph (f)?
+    - any offence under sections 44 to 46 of the Serious Crime Act 2007 which relates to an offence covered by sub-paragraph (f)?
     
     - money laundering within the meaning of sections 340(11) and 415 of the Proceeds of Crime Act 2002?
   
@@ -15,6 +15,6 @@ question: >
     - an offence under section 71 of the Coroners and Justice Act 2009?
   
     - an offence in connection with the proceeds of drug trafficking within the meaning of section 49, 50 or 51 of the Drug Trafficking Act 1994; or
-  any other offence within the meaning of Article 57(1) of the Directive?
+  any other offence within the meaning of article 57(1) of the Directive?
   
 type: boolean
