--- a/g7_declaration/SQ4-1b.yml
+++ b/g7_declaration/SQ4-1b.yml
@@ -1,13 +1,15 @@
 question: >
-  Been found to be incorrect as a result of:
-  i. HMRC successfully challenging it under the General Anti-Abuse Rule (GAAR) or
-  the “Halifax” abuse principle; or
-  ii. a tax authority in a jurisdiction in which the Potential Provider is
-  established successfully challenging it  under any tax rules or legislation
-  that have an effect equivalent or similar to the GAAR or the “Halifax” abuse
-  principle; or
-  iii. the failure of an avoidance scheme which the Potential Provider was involved
-  in and which was, or should have been, notified under the Disclosure of Tax
-  Avoidance Scheme (DOTAS) or any equivalent or similar regime in a jurisdiction
-  in which the Potential Provider is established?
+ Have any of your organisation's tax returns submitted on or after 1 October 2012 been found to be incorrect as of 1 April 2013 or more recently because:
+  
+  
+    - HMRC successfully challenged it under the General Anti-Abuse Rule (GAAR) or
+      the 'Halifax' abuse principle?
+  
+    - a tax authority in a jurisdiction in which your organisation is
+      established successfully challenged it under any tax rules or legislation
+      that have an effect equivalent or similar to the GAAR or Halifax abuse
+      principle?
+  
+    - the failure of an avoidance scheme that your organisation was involved in and that was notfied, or should have been notfied, under the Disclosure of Tax Avoidance Scheme (DOTAS)?
+  
 type: boolean
