--- a/g7_declaration/SQ4-1c.yml
+++ b/g7_declaration/SQ4-1c.yml
@@ -1,6 +1,5 @@
 question: >
-  If you responded Yes to either SQ4.1(a) or SQ4.1(b) - (i) to (iii), you may
-  provide details, in the following text field, of any mitigating factors that
-  you consider relevant and that you wish the Authority to take into
+  If you responded yes to either SQ4.1(a) or SQ4.1(b) - (i) to (iii), please provide details of any mitigating factors that
+  you consider relevant and that should be taken into
   consideration.
 type: boolean
