--- a/g7_declaration/SQ3-1d.yml
+++ b/g7_declaration/SQ3-1d.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past three years, has your organisation or any of your partner organisations:
+  Within the past 3 years, has your organisation or any of your partner organisations:
   
     - entered into agreements with other economic operators aimed at distorting competition?
 type: boolean
