--- a/g7_declaration/SQ3-1e.yml
+++ b/g7_declaration/SQ3-1e.yml
@@ -1,5 +1,5 @@
 question: >
- Within the past three years, has your organisation or any of your partner organisations:
+ Within the past 3 years, has your organisation or any of your partner organisations:
  
  
   - had a conflict of interest within the meaning of Regulation
