--- a/g7_declaration/SQD2d.yml
+++ b/g7_declaration/SQD2d.yml
@@ -1,3 +1,10 @@
-question: Is it a legal requirement in the State where you are established for you to be licensed or to be a member of a relevant organisation in order to provide the Available Services?
-hint: We think this can be deleted as it is a duplicate of a question asked earlier
+question: >
+  To provide the required services, is it a legal requirement in the state where you're established to be:
+
+
+  - licensed?
+
+  - a member of a relevant organisation?
+  
+hint: "We think this can be deleted as it is a duplicate of a question asked earlier"
 type: boolean
