--- a/g7_declaration/SQ3-1i-i.yml
+++ b/g7_declaration/SQ3-1i-i.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past three years, has your organisation or any of your partner organisations:
+  Within the past 3 years, has your organisation or any of your partner organisations:
   
   
     - unduly influenced the decision-making process of the contracting authority?
