--- a/g7_declaration/SQ3-1g.yml
+++ b/g7_declaration/SQ3-1g.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past three years, has your organisation or any of your partner organisations:
+  Within the past 3 years, has your organisation or any of your partner organisations:
   
   
     - shown significant or persistent deficiencies in the performance of a substantive requirement under a prior public contract, a
