--- a/g7_declaration/SQ1-1ci.yml
+++ b/g7_declaration/SQ1-1ci.yml
@@ -6,10 +6,18 @@ options:
   -
     label: limited company
   -
+    label: limited liability company
+  -
     label: limited liability partnership
   -
     label: other partnership
   -
     label: sole trader
+  -
+    label: established consortium
+  -
+    label: to be formed consortium
+  -
+    label: special purpose vehicle
   -
     label: other (please specify)
