--- a/g7_declaration/SQ1-1m.yml
+++ b/g7_declaration/SQ1-1m.yml
@@ -1,2 +1,13 @@
-question: Are you a small or medium-sized enterprise (SME)?
+question: What is the size of your organisation?
+
+
+    - micro
+  
+    - small 
+  
+    - medium
+  
+    - large
+    
+hint: "For help determining company size, visit http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm"
 type: boolean
