--- a/g7_declaration/SQ3-1h-ii.yml
+++ b/g7_declaration/SQ3-1h-ii.yml
@@ -2,7 +2,7 @@ question: >
     Within the past 3 years, has your organisation or any of your partner organisations:
 
 
-    - withheld such information or can't submit supporting documents
+    - withheld such information or failed to submit supporting documents
       required under Regulation 59 (http://www.legislation.gov.uk/uksi/2015/102/regulation/59/made) of the Public Contracts Regulations 2015?
       
 type: boolean
