--- a/g7_declaration/SQ3-1j.yml
+++ b/g7_declaration/SQ3-1j.yml
@@ -1,5 +1,5 @@
 question: >
   Within the past 3 years, has your organisation or any of your partner organisations:
   
-    - provided misleading information that may have a material influence on decisions concerning exclusion, selection or award?
+    - provided misleading information that may have an influence on decisions concerning exclusion, selection or award?
 type: boolean
