--- a/g7_declaration/SQ1-1ci.yml
+++ b/g7_declaration/SQ1-1ci.yml
@@ -16,7 +16,7 @@ options:
   -
     label: established consortium
   -
-    label: to be formed consortium
+    label: to-be-formed consortium
   -
     label: special purpose vehicle
   -
