--- a/g7_declaration/SQ4-1b.yml
+++ b/g7_declaration/SQ4-1b.yml
@@ -1,15 +1,15 @@
 question: >
- Have any of your organisation's tax returns submitted on or after 1 October 2012 been found to be incorrect as of 1 April 2013 or more recently because:
+ Have any of your organisation's tax returns, submitted on or after 1 October 2012, been found to be incorrect on, or after, 1 April 2013 because:
   
   
     - HMRC successfully challenged it under the General Anti-Abuse Rule (GAAR) or
-      the 'Halifax' abuse principle?
+      the Halifax abuse principle?
   
-    - a tax authority in a jurisdiction in which your organisation is
-      established successfully challenged it under any tax rules or legislation
+    - a tax authority (in a jurisdiction in which your organisation is
+      established) successfully challenged it under any tax rules or legislation
       that have an effect equivalent or similar to the GAAR or Halifax abuse
       principle?
   
-    - the failure of an avoidance scheme that your organisation was involved in and that was notfied, or should have been notfied, under the Disclosure of Tax Avoidance Scheme (DOTAS)?
+    - an avoidance scheme that your organisation was involved with failed?
   
 type: boolean
