--- a/g7_declaration/SQ1-3.yml
+++ b/g7_declaration/SQ1-3.yml
@@ -1,5 +1,5 @@
 question: "Please confirm that all cloud services you are providing have or support:"
-hint: "Your cloud services must have or support all of these characteristics"
+hint: "Your cloud services must have or support all of these characteristics."
 type: checkboxes
 options:
   -
