--- a/g7_declaration/SQ4-1c.yml
+++ b/g7_declaration/SQ4-1c.yml
@@ -2,4 +2,4 @@ question: >
   If you responded yes to either SQ4.1(a) or SQ4.1(b) - (i) to (iii), please provide details of any mitigating factors that
   you consider relevant and that should be taken into
   consideration.
-type: boolean
+type: textbox_large 
