--- a/g7_declaration/SQ5-1a.yml
+++ b/g7_declaration/SQ5-1a.yml
@@ -1,15 +1,15 @@
 question: >
-  Has your organisation had, or
+  Does your organisation have, or
   will it have prior to framework award, Employer’s Liability insurance of at least
-  £5million?
+  £5 million?
 
 hint:  Employer’s Liability insurance is a legal requirement except for businesses
   employing only the owner or close family members.
 type: radios
 options:
   -
-    label: "Yes – your organisation has, or will have in place, Employer’s Liability insurance of at least £5million and you will provide certification prior to framework award."
+    label: "Yes – your organisation has, or will have in place, Employer’s Liability insurance of at least £5 million and you will provide certification prior to framework award."
   -
-    label: "No - your organisation does not have, and will not have in place, Employer’s Liability insurance of at least £5million prior to framework award."
+    label: "No - your organisation does not have, and will not have in place, Employer’s Liability insurance of at least £5 million prior to framework award."
   -
-    label: "Not applicable - your organisation does not need Employer’s Liability insurance of at least £5million because your organisation employs only the owner or close family members."
+    label: "Not applicable - your organisation does not need Employer’s Liability insurance because your organisation employs only the owner or close family members."
