--- a/g7_declaration/SQ5-1a.yml
+++ b/g7_declaration/SQ5-1a.yml
@@ -1,6 +1,6 @@
 question: >
   Does your organisation have, or
-  will it have prior to framework award, Employer’s Liability insurance of at least
+  will it have prior to the framework award, Employer’s Liability insurance of at least
   £5 million?
 
 hint:  Employer’s Liability insurance is a legal requirement except for businesses
