--- a/g7_declaration/SQ2-1e.yml
+++ b/g7_declaration/SQ2-1e.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past five years has anyone who represents your organisation or a partner organisation been convicted of any offence that relates to fraud affecting
+  Within the past 5 years has anyone who represents your organisation or a partner organisation been convicted of any offence that relates to fraud affecting
       the European Communities’ financial interests as defined by article 1 of the
       Convention on the Protection of the Financial Interests of the European
   Communities, including:
