--- a/g7_declaration/SQ1-1j-i.yml
+++ b/g7_declaration/SQ1-1j-i.yml
@@ -1,8 +1,9 @@
 question: >
   To provide the services specified in this procurement, is it a legal requirement in the state where you're established to be:
+type: checkboxes
+options:
+  -
+    label: licensed?
+  -
+    label: a member of a relevant organisation?
 
-
-  - licensed?
-
-  - a member of a relevant organisation?
-type: boolean
