--- a/g7_declaration/SQ1-1l.yml
+++ b/g7_declaration/SQ1-1l.yml
@@ -1,5 +1,5 @@
 question: "Is your organisation classed as a:"
-hint: "If your organisation is not classed as a VCSE, sheltered workshop or public service mutual, you don't have to answer this question."
+
 type: checkboxes
 options:
   -
@@ -7,4 +7,8 @@ options:
   -
     label: sheltered workshop?
   -
-    label: public service mutual?
+    label: public service mutual?  
+    
+    label: none of the above?
+    
+    
