--- a/g7_declaration/SQ1-1i-ii.yml
+++ b/g7_declaration/SQ1-1i-ii.yml
@@ -1,3 +1,3 @@
-question: "If you answered yes to SQ1.1(i) - (i), please provide details including your organisation's registration number."
+question: "If you answered yes to question 20, please provide details including your organisation's registration number."
 hint: (Maximum 4096 characters.)
 type: text
