--- a/g7_declaration/SQ1-1j-ii.yml
+++ b/g7_declaration/SQ1-1j-ii.yml
@@ -1,2 +1,2 @@
-question: If you answered yes to SQ1.1(j) - (i), please give details of the state's requirements and confirm whether you've met them.
+question: If you answered 'licensed' or 'a member of a relevant organisation' in question 22, please give details of the state's requirements and confirm whether you've met them.
 type: text
