--- a/g7_declaration/SQ4-1c.yml
+++ b/g7_declaration/SQ4-1c.yml
@@ -1,5 +1,5 @@
 question: >
-  If you responded yes to either SQ4.1(a) or SQ4.1(b) - (i) to (iii), please provide details of any mitigating factors that
+  If you responded yes to either question 54 or question 55, please provide details of any mitigating factors that
   you consider relevant and that should be taken into
   consideration.
 type: textbox_large 
