--- a/g7_declaration/SQ1-1m.yml
+++ b/g7_declaration/SQ1-1m.yml
@@ -1,5 +1,5 @@
 question: What is the size of your organisation?
-hint: "For help determining company size, visit http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm"
+hint: "[Check the size of your organisation](http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm)"
 type: radios
 options: 
   - 
