--- a/g7_declaration/SQ3-1e.yml
+++ b/g7_declaration/SQ3-1e.yml
@@ -2,7 +2,7 @@ question: >
  Within the past 3 years, has your organisation or any of your partner organisations:
  
  
-  - had a conflict of interest within the meaning of Regulation
-    24 (http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made) of the Public Contracts Regulations 2015?
+  - had a conflict of interest within the meaning of [Regulation
+    24](http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made) of the Public Contracts Regulations 2015?
   
 type: boolean
