--- a/g7_declaration/SQ3-1f.yml
+++ b/g7_declaration/SQ3-1f.yml
@@ -2,5 +2,5 @@ question: >
   Within the past 3 years, has your organisation or any of your partner organisations:
 
 
-  - prepared a procurement procedure that distorted competition as described in Regulation 41 (http://www.legislation.gov.uk/uksi/2015/102/regulation/41/made) of the Public Contracts Regulations 2015?
+  - prepared a procurement procedure that distorted competition as described in [Regulation 41 of the Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/41/made)?
 type: boolean
