--- a/g7_declaration/SQ3-1h-ii.yml
+++ b/g7_declaration/SQ3-1h-ii.yml
@@ -3,6 +3,6 @@ question: >
 
 
     - withheld such information or failed to submit supporting documents
-      required under Regulation 59 (http://www.legislation.gov.uk/uksi/2015/102/regulation/59/made) of the Public Contracts Regulations 2015?
+      required under [Regulation 59 of the Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/59/made)?
       
 type: boolean
