--- a/g7_declaration/SQ4-1b.yml
+++ b/g7_declaration/SQ4-1b.yml
@@ -1,5 +1,5 @@
 question: >
- Have any of your organisation's tax returns, submitted on or after 1 October 2012, been found to be incorrect on, or after, 1 April 2013 because:
+ Have any of your organisation's tax returns, submitted on or after 1 October 2012, been found to be incorrect on or after 1 April 2013 because:
   
   
     - HMRC successfully challenged it under the General Anti-Abuse Rule (GAAR) or
