--- a/g6/dataAtRestProtections.yml
+++ b/g6/dataAtRestProtections.yml
@@ -9,7 +9,7 @@ depends:
       - PaaS
       - IaaS
 assuranceApproach: 4answers-type1
-type: radios
+type: checkboxes
 options:
     -
         label: 'CPA Foundation-grade assured components'
