Change some questions from radios to checkboxes
This is in line with the changes agreed with Tony R prior to the G6 SSP data export.

--- a/g6/dataAtRestProtections.yml
+++ b/g6/dataAtRestProtections.yml
@@ -1,6 +1,6 @@
 requirements: 'Consumers should have sufficient confidence that storage media containing their data is protected from unauthorised access.'
 filters: 'Consumers should have sufficient confidence that storage media containing their data is protected from unauthorised access.'
-hint: 'How is storage media containing consumer data protected from unauthorised physical access? Choose 1.'
+hint: 'How is storage media containing consumer data protected from unauthorised physical access? Choose all that apply.'
 depends:
   -
     "on": lot
