--- a/g6/dataProtectionBetweenUserAndService.yml
+++ b/g6/dataProtectionBetweenUserAndService.yml
@@ -1,6 +1,6 @@
 requirements: 'Data in transit is protected between the user’s devices and the service'
 filters: 'Data in transit is protected between the user’s devices and the service'
-hint: 'Choose 1'
+hint: 'Choose all that apply'
 depends:
   -
     "on": lot
@@ -10,7 +10,7 @@ depends:
       - IaaS
 assuranceApproach: 4answers-type1
 assuranceHint: 'How can you support the above answer?'
-type: radios
+type: checkboxes
 options:
     -
         label: 'Encrypted PSN service'
