Make t&c question the same style as other document questions

--- a/g6/termsAndConditionsDocumentURL.yml
+++ b/g6/termsAndConditionsDocumentURL.yml
@@ -1,4 +1,4 @@
-question: 'Please upload your terms and conditions document'
+question: 'Terms and conditions document'
 depends:
   -
     "on": lot
