--- a/g7_declaration/SQ1-1d.yml
+++ b/g7_declaration/SQ1-1d.yml
@@ -1,3 +1,3 @@
 question: When was your organisation first registered?
-hint: (Maximum 255 characters.)
+hint: If you don't have a registered organisation, you don't need to answer this question.
 type: text
