--- a/g7_declaration/SQ1-1o.yml
+++ b/g7_declaration/SQ1-1o.yml
@@ -1,2 +1,3 @@
-question: What is your Supplier Contract Notice email address?
+question: What is the supplier email address that should be included on the contract notice?
+hint: The contract notice confirms the outcome of the framework competition and includes the names of all the successful suppliers.
 type: text
