--- a/g7_declaration/SQ4-1b.yml
+++ b/g7_declaration/SQ4-1b.yml
@@ -10,6 +10,6 @@ question: >
       that have an effect equivalent or similar to the GAAR or Halifax abuse
       principle?
   
-    - an avoidance scheme that your organisation was involved with failed?
+    - an avoidance scheme that your organisation was involved with failed and was, or should have been, notified under the Disclosure of Tax Avoidance Scheme (DOTAS) or equivalent?
   
 type: boolean
