--- a/g7_declaration/SQ2-1e.yml
+++ b/g7_declaration/SQ2-1e.yml
@@ -5,7 +5,7 @@ question: >
   Communities, including:
   
   
-   - the common law offence of cheating HMRC?
+   - the common law offence of cheating the Revenue (HMRC)?
    
    - the common law offence of conspiracy to defraud?
    
