--- a/g7_declaration/SQC2.yml
+++ b/g7_declaration/SQC2.yml
@@ -1,3 +1,3 @@
-question:
+question: Do you accept the declaration of compliance as described in Attachment 6 of the supplier pack? (will include link)
 hint:
-type:
+type: boolean
