--- a/g7_declaration/SQC3.yml
+++ b/g7_declaration/SQC3.yml
@@ -1,4 +1,4 @@
-question: Do you confirm that your organisation complies with legal equality and diversity obligations relating to:
+question: "Do you confirm that your organisation complies with legal equality and diversity obligations relating to:"
 hint:
 type: checkboxes
 options:
