--- a/g7_declaration/SQ1-1j-i.yml
+++ b/g7_declaration/SQ1-1j-i.yml
@@ -1,5 +1,5 @@
 question: >
-  To provide the services specified in this procurement, is it a legal requirement in the state where you're established to be:
+  If your business was not established in the UK, is it a legal requirement in the state where you’re established to be licensed or a member of a relevant organisation to provide the services specified in this procurement?:
 type: checkboxes
 options:
   -
